src/test/ui/coherence/coherence_copy_like_err_struct.old.stderr
error[E0119]: conflicting implementations of trait `MyTrait` for type `lib::MyStruct<MyType>`:
  --> $DIR/coherence_copy_like_err_struct.rs:22:1
   |
LL | impl<T: lib::MyCopy> MyTrait for T { }
   | ---------------------------------- first implementation here
...
LL | impl MyTrait for lib::MyStruct<MyType> { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `lib::MyStruct<MyType>`
   |
   = note: upstream crates may add new impl of trait `lib::MyCopy` for type `lib::MyStruct<MyType>` in future versions

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
